samples/_failures_safe/1761072583_d241be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0c6b02a.c: In function ‘main’:
./samples/SAFE/__tmp_e0c6b02a.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e0c6b02a.c:200:9: error: expected declaration or statement at end of input
